@@ -141,6 +141,7 @@ Chronological list of authors
   - Morgan L. Nance
   - Faraaz Shah
   - Wiep van der Toorn
+  - Siddharth Jain
 
 
 External code
