@@ -411,7 +411,7 @@ def alignto(mobile, reference, select=None, weights=None,
        :class:`~MDAnalysis.core.groups.AtomGroup` with defined atom order as
        described under :ref:`ordered-selections-label`).
     match_atoms : bool (optional)
-        Whether to match the mobile and reference atom-by-atom. Default ``True``. 
+        Whether to match the mobile and reference atom-by-atom. Default ``True``.
     weights : {"mass", ``None``} or array_like (optional)
        choose weights. With ``"mass"`` uses masses as weights; with ``None``
        weigh each atom equally. If a float array of the same length as
@@ -569,7 +569,7 @@ class AlignTraj(AnalysisBase):
         tol_mass : float (optional)
             Tolerance given to `get_matching_atoms` to find appropriate atoms
         match_atoms : bool (optional)
-            Whether to match the mobile and reference atom-by-atom. Default ``True``. 
+            Whether to match the mobile and reference atom-by-atom. Default ``True``.
         strict : bool (optional)
             Force `get_matching_atoms` to fail if atoms can't be found using
             exact methods
@@ -701,7 +701,7 @@ class AlignTraj(AnalysisBase):
 
 
 class AverageStructure(AnalysisBase):
-    """RMS-align trajectory to a reference structure using a selection, 
+    """RMS-align trajectory to a reference structure using a selection,
     and calculate the average coordinates of the trajectory.
 
     Both the reference `reference` and the trajectory `mobile` must be
@@ -710,7 +710,7 @@ class AverageStructure(AnalysisBase):
     current frame.
 
     The output file format is determined by the file extension of
-    `filename`. 
+    `filename`.
 
     Example
     -------
@@ -753,7 +753,7 @@ class AverageStructure(AnalysisBase):
         tol_mass : float (optional)
             Tolerance given to `get_matching_atoms` to find appropriate atoms
         match_atoms : bool (optional)
-            Whether to match the mobile and reference atom-by-atom. Default ``True``. 
+            Whether to match the mobile and reference atom-by-atom. Default ``True``.
         strict : bool (optional)
             Force `get_matching_atoms` to fail if atoms can't be found using
             exact methods
@@ -768,7 +768,7 @@ class AverageStructure(AnalysisBase):
         ref_frame : int (optional)
             frame index to select frame from `reference`
         verbose : bool (optional)
-            Set logger to show more information and show detailed progress of 
+            Set logger to show more information and show detailed progress of
             the calculation if set to ``True``; the default is ``False``.
 
 
@@ -785,7 +785,7 @@ class AverageStructure(AnalysisBase):
         rmsd : float
             Average RMSD per frame
         filename : str
-            String reflecting the filename of the file where the average 
+            String reflecting the filename of the file where the average
             structure is written
 
 
@@ -882,7 +882,7 @@ class AverageStructure(AnalysisBase):
                              self.mobile,
                              mobile_com,
                              self._ref_com, self._weights)[1]
-        self.positions += self.mobile_atoms.positions            
+        self.positions += self.mobile_atoms.positions
 
     def _conclude(self):
         self.positions /= self.n_frames
@@ -1350,45 +1350,50 @@ def get_matching_atoms(ag1, ag2, tol_mass=0.1, strict=False, match_atoms=True):
 
             # stop if we created empty selections (by removing ALL residues...)
             if ag1.n_atoms == 0 or ag2.n_atoms == 0:
-                errmsg = ("Failed to automatically find matching atoms: created empty selections. " +
+                errmsg = ("Failed to automatically find matching atoms: created empty selections. "
                           "Try to improve your selections for mobile and reference.")
                 logger.error(errmsg)
                 raise SelectionError(errmsg)
-                
+
     if match_atoms:
         # check again because the residue matching heuristic is not very
         # good and can easily be misled (e.g., when one of the selections
         # had fewer atoms but the residues in mobile and reference have
         # each the same number)
-        try:
-            mass_mismatches = (np.absolute(ag1.masses - ag2.masses) > tol_mass)
-        except ValueError:
-            errmsg = ("Failed to find matching atoms: len(reference) = {}, len(mobile) = {} " +
-                    "Try to improve your selections for mobile and reference.").format(
-                        ag1.n_atoms, ag2.n_atoms)
-            logger.error(errmsg)
-            raise_from(SelectionError(errmsg), None)
+        if (not hasattr(ag1, 'masses') or not hasattr(ag2, 'masses')):
+            msg = "Atoms could not be matched since they don't contain masses."
+            logger.info(msg)
+            warnings.warn(msg, category=SelectionWarning)
+        else:
+            try:
+                mass_mismatches = (np.absolute(ag1.masses - ag2.masses) > tol_mass)
+            except ValueError:
+                errmsg = ("Failed to find matching atoms: len(reference) = {}, len(mobile) = {} "
+                          "Try to improve your selections for mobile and reference.").format(
+                            ag1.n_atoms, ag2.n_atoms)
+                logger.error(errmsg)
+                raise_from(SelectionError(errmsg), None)
 
-        if np.any(mass_mismatches):
-            # Test 2 failed.
-            # diagnostic output:
-            logger.error("Atoms: reference | trajectory")
-            for ar, at in zip(ag1[mass_mismatches], ag2[mass_mismatches]):
-                logger.error(
-                    "{0!s:>4} {1:3d} {2!s:>3} {3!s:>3} {4:6.3f}  |  {5!s:>4} {6:3d} {7!s:>3} {8!s:>3} {9:6.3f}".format(
-                        ar.segid,
-                        ar.resid,
-                        ar.resname,
-                        ar.name,
-                        ar.mass,
-                        at.segid,
-                        at.resid,
-                        at.resname,
-                        at.name,
-                        at.mass))
-            errmsg = ("Inconsistent selections, masses differ by more than {0}; "
-                    "mis-matching atoms are shown above.").format(tol_mass)
-            logger.error(errmsg)
-            raise SelectionError(errmsg)
+            if np.any(mass_mismatches):
+                # Test 2 failed.
+                # diagnostic output:
+                logger.error("Atoms: reference | trajectory")
+                for ar, at in zip(ag1[mass_mismatches], ag2[mass_mismatches]):
+                    logger.error(
+                        "{0!s:>4} {1:3d} {2!s:>3} {3!s:>3} {4:6.3f}  |  {5!s:>4} {6:3d} {7!s:>3} {8!s:>3} {9:6.3f}".format(
+                            ar.segid,
+                            ar.resid,
+                            ar.resname,
+                            ar.name,
+                            ar.mass,
+                            at.segid,
+                            at.resid,
+                            at.resname,
+                            at.name,
+                            at.mass))
+                errmsg = ("Inconsistent selections, masses differ by more than {0}; "
+                           "mis-matching atoms are shown above.").format(tol_mass)
+                logger.error(errmsg)
+                raise SelectionError(errmsg)
 
     return ag1, ag2
