@@ -416,7 +416,7 @@ class RMSD(AnalysisBase):
              length) or if it is not a 1D array (see
              :func:`MDAnalysis.lib.util.get_weights`).
 
-             A :exc:`ValueError` is also raised if the length of `weights_groupselections` 
+             A :exc:`ValueError` is also raised if the length of `weights_groupselections`
              are not compatible with `groupselections`.
 
         Notes
@@ -545,7 +545,7 @@ class RMSD(AnalysisBase):
         # check weights type
         if iterable(self.weights) and (np.array(weights).dtype
                                 not in (np.dtype('float64'),np.dtype('int64'))):
-            raise TypeError("weight should only be be 'mass', None or 1D float array."
+            raise TypeError("weights should only be 'mass', None or 1D float array."
                                  "For weights on groupselections, use **weight_groupselections** ")
         if iterable(self.weights) or self.weights != "mass":
             get_weights(self.mobile_atoms, self.weights)
